# CompFinance

./: .gitignore  AutocallPricer.xlsx  CMakeLists.txt  NOTES.md  README.md  msvc_cmake_builder.cmd  testDLM.xlsx  threadPool.h  xlComp.vcxproj  xlComp.xll  xlMemoryManager.cpp  xlMemoryPool.h  xlframework.c  xlframework.h  xlmemorymanager.h
aad_library/: CMakeLists.txt  aad_library
aad_library/includes/: ThreadPool.h  aad_library.hpp  blocklist.h  exported.hpp  mcBase.h  xlcall.h
aad_library/src/: AAD.cpp  aad_library.cpp
aad_work/: CMakeLists.txt
archive/code/: xlMemoryPool.cpp
archive/vs/: xlComp.vcxproj
dl_loader/: library_names.hpp
dl_loader/linux/: DLLoader.hpp
dl_loader/windows/: DLLoader.hpp
files/: xlComp.vcxproj  xlComp.vcxproj.filters
libraries/: CMakeLists.txt
libraries/aad/: CMakeLists.txt  aad
libraries/aad/includes/: AAD.h  AADExpr.h  AADNode.h  AADNumber.h  AADTape.h  ConcurrentQueue.h  ThreadPool.h  blocklist.h  choldc.h  gaussians.h  interp.h  main.h  matrix.h  mcBase.h  mcMdl.h  mcMdlBS.h  mcMdlDupire.h  mcMdlMultiDisplaced.h  mcPrdMulti.h  mrg32k3a.h  store.h  threadPool.h  toyCode.h  utility.h
libraries/aad/src/: AAD.cpp  ThreadPool.cpp  sobol.cpp
libraries/aad_ingestion/: CMakeLists.txt  aad_ingestion  license_to_use_on_top
libraries/aad_ingestion/includes/: AADExpr.hpp  AADNode.hpp  AADNumber.hpp  AADTape.hpp  ConcurrentQueue.hpp  analytics.hpp  blocklist.hpp  choldc.hpp  gaussians.hpp  interp.hpp  matrix.hpp
libraries/aad_ingestion/src/: AADNode.cpp  AADTape.cpp  analytics.cpp
libraries/aad_xl_interface/: CMakeLists.txt  aad_xl_interface
libraries/aad_xl_interface/includes/: xlOper.h
libraries/aad_xl_interface/src/: xlExport.cpp
libraries/excel_sdk_api/: CMakeLists.txt  excel_sdk_api
libraries/excel_sdk_api/includes/: xlMemoryManager.h  xlMemoryPool.h  xlcall.h  xlframework.h
libraries/excel_sdk_api/src/: xlMemoryManager.cpp  xlMemoryPool.cpp  xlcall.cpp  xlframework.c
libraries/python_interface/: CMakeLists.txt
libraries/python_interface/src/: node.cpp  py_aad.cpp
xl_spreadsheets/: AutocallPricer.xlsx  testDLM.xlsx
